<resources>
  <string name="app_name">Plus SMS</string>
  
  <string name="title_activity_main">Welcome to Plus SMS</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="home">Home</string>
  <string name="banking">Banking</string>
  <string name="settings">Settings</string>
  <string name="share">Share</string>
  <string name="preferences">Preferences</string>
  <string name="invite_friends">Invite Friends</string>
  <string name="now">Now</string>
  <string name="loading">Loading...</string>
  <string name="please_wait_n_processing_sms_for_first_run">Please Wait… Processing SMS for First Run</string>
  <string name="we_are_done">We Are Done!</string>
  <string name="app_name_summary">Unread Sms Summary - Plus Sms</string>
  <string name="other_sms">Others</string>
  <string name="ads_sms">Ads</string>
  <string name="updates_sms">Updates</string>
  <string name="money_sms">Money</string>
  <string name="personal_sms">Personal</string>
  <string name="unread_sms">Unread SMS</string>
  <string name="then">Then</string>
  <string name="search_in">Search in&#160;</string>
  <string name="dont_exit_setup">Please Don\'t Exit from Setup while Processing!</string>
  <string name="deletion_and_sending_unavailable">SMS Deletion and Sending Capabilities are not available!</string>
  <string name="fix_this">Fix This!</string>
  <string name="copied">Copied!</string>
  <string name="share_using">Share Using</string>
  <string name="invite_msg">Hey there, I have found this new amazing application which helps me better manage my text
    messages, by categorizing them into various categories.\nTry it out now, by signing up @
    https://play.google.com/apps/testing/com.msahil432.sms
  </string>
  
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search">Search</string>
  <string name="title_activity_settings">Settings</string>
  
  <!-- Strings related to Settings -->
  
  <!-- Example General settings -->
  <string name="pref_header_general">General</string>
  
  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
    history
  </string>
  
  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>
  
  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>
  
  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>
  
  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>
  
  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>
  
  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>
  
  <string-array name="multi_select_list_preference_default_value"/>
  
  <string name="pref_title_system_sync_settings">System sync settings</string>
  
  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>
  
  <string name="pref_title_new_message_notifications">New message notifications</string>
  
  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>
  
  <string name="pref_title_vibrate">Vibrate</string>
  <string name="set_dark_always">Set Dark Mode to Always</string>
  <string name="dark_always_explain">Dark Mode is automaticaally activated according to Time. Change this to be enabled
    always.
  </string>
  <string name="reset_app">Reset Application</string>
  <string name="clear_data_explain">Clear all data of application and start afresh</string>
  <string name="type_your_message_here">Type your Message here</string>
  <string name="wait_for_net">Waiting for Internet</string>
  <string name="call">Call</string>
  <string name="view_contact">View Contact</string>
  <string name="report_wrong_category">Report Wrong Category</string>
  <string name="welcome">Welcome</string>
  <string name="welcome_description">
    <b>Plus Sms</b> \n\n <i>Making Short Messages Smarter</i>\n\n\n It automatically organizes all your SMS into
    Personal, Updates, Money and Ads category to help you declutter your SMS Inbox so that you never miss any important
    message. Switch to Plus SMS as your default SMS App to have the smart SMS inbox experience.
  </string>
  <string name="sms_permission">Please Grant SMS Permissions</string>
  <string name="sms_description">This Application uses an online server to categorize your SMS, so your Inbox SMS are
    sent to the server using secure HTTPS connection. In this process, only the Text Part of received SMS is sent to the
    server. The sent SMS are not uploaded either.
  </string>
  <string name="contacts_permission">Please Grant Contacts Permissions</string>
  <string name="contacts_description">It is required only to show Contact Names and some information inside Application.
    \n\nNone of your Contacts, Phone Numbers are uploaded to server in any way.
  </string>
  <string name="lets_go">All Done! Let\'s Go.</string>
  <string name="copy">Copy</string>
  <string name="mark_read">Mark Read</string>
  <string name="delete">Delete</string>
  <string name="reply">Reply</string>
</resources>
