<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  
  <SwitchPreference
       android:key="dark_mode"
       android:title="@string/set_dark_always"
       android:summary="@string/dark_always_explain"
       android:defaultValue="false"/>
  <EditTextPreference
       android:key="example_text"
       android:title="@string/pref_title_display_name"
       android:defaultValue="@string/pref_default_display_name"
       android:selectAllOnFocus="true"
       android:inputType="textCapWords"
       android:capitalize="words"
       android:singleLine="true"
       android:maxLines="1"/>
  
  <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
  <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
  <ListPreference
       android:key="example_list"
       android:title="@string/pref_title_add_friends_to_messages"
       android:defaultValue="-1"
       android:entries="@array/pref_example_list_titles"
       android:entryValues="@array/pref_example_list_values"
       android:negativeButtonText="@null"
       android:positiveButtonText="@null"/>
  
  <Preference
       android:key="clear_data"
       android:summary="@string/clear_data_explain"
       android:title="@string/reset_app"  />
  

</PreferenceScreen>
