<?xml version="1.0" encoding="utf-8"?>
<menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
       android:id="@+id/convo_call"
       android:title="@string/call"
       android:icon="@drawable/ic_call_black_24dp"
       app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/convo_search"
    android:title="@string/search"
    android:icon="@drawable/ic_search_black_24dp"
    app:showAsAction="ifRoom"
  app:actionViewClass="androidx.appcompat.widget.SearchView"/>
  <item
    android:id="@+id/convo_delete"
    android:title="@string/delete"
    android:icon="@drawable/ic_delete_black_24dp"/>
  <item
    android:id="@+id/convo_open_contact"
    android:title="@string/view_contact"
    android:icon="@drawable/ic_person_pin_black_24dp"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/convo_report_cat"
    android:title="@string/report_wrong_category"/>
</menu>