<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
     tools:context=".setupActivity.SetupActivity">
  
  <androidx.appcompat.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="80dp"
       android:layout_margin="32dp"
       app:layout_constraintTop_toTopOf="parent"
       android:text="@string/please_wait_n_processing_sms_for_first_run"
       android:textAppearance="@style/Text.Title"
       app:autoSizeTextType="uniform"
       android:id="@+id/setup_text"/>
  <com.transferwise.sequencelayout.SequenceLayout
       android:id="@+id/setup_sequence"
       app:layout_constraintTop_toBottomOf="@id/setup_text"
       app:layout_constraintBottom_toTopOf="@+id/setup_progress"
       app:layout_constraintVertical_bias="0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
    <com.transferwise.sequencelayout.SequenceStep
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/setup_starting"
         app:anchor="Now"
         app:active="true"
         app:title="Starting..."/>
    <com.transferwise.sequencelayout.SequenceStep
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/setup_collecting_sms"
         app:title="Collecting SMS"/>
    <com.transferwise.sequencelayout.SequenceStep
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/setup_collected_sms"
         app:title="SMS Gathered"/>
    <com.transferwise.sequencelayout.SequenceStep
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/setup_categorizing_sms"
         app:anchor="Soon"
         app:title="Categorizing SMS"
         app:subtitle="And Saving Results in Database."
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"/>
    <com.transferwise.sequencelayout.SequenceStep
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/setup_done"
         app:anchor="@string/then"
         app:title="@string/we_are_done"/>
    <com.transferwise.sequencelayout.SequenceStep
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/setup_dummy_step"
         app:title=""/>
  </com.transferwise.sequencelayout.SequenceLayout>
  <com.github.mikephil.charting.charts.PieChart
       android:id="@+id/setup_progress"
       android:layout_width="match_parent"
       android:layout_margin="8dp"
       android:layout_height="260dp"
       app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>